# aoc-2024

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
aoc/: utils.py
days/: day1.py  day2.py  day3.py  day4.py  day5.py
