[project]
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "pre-commit>=4.0.1",
]

[tool.hatch.build]
include = [
    "src/aoc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
