[project]
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]

[tool.hatch.build]
include = [
    "src/aoc",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
respect-gitignore = false

extend-exclude = [
    "pyproject.toml",
]

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
  "YTT",  # flake8-2020
  "ANN", # flake8-annotations
  "S",  # flake8-bandit
  "B",  # flake8-bugbear
  "Q",  # flake8-quotes
  "FA", # flake8-future-annotations
  "COM", # flake8-commas
  "DTZ", # flake8-datetimez
  "FA", # flake8-future-annotations
  "LOG", # flake8-logger
  "G", # flake8-logging-format
  "TID", # flake8-tidy-imports
  "Q", # flake8-quotes
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
]

ignore = [
    "ANN204", # Missing return type annotation for special method `__init__`
    "B008",  # Function call in defaults. Required for CLI
    "N805", # First argument of a method should be named `self`
    "F821",  # Undefined name
    "N999", # Invalid module name
    "G004", # logging-f-string
    "UP006", # Non PEP 585 annotation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"